# ChannelBot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: check.yml  flake8.yml  mypy.yml  push.yml
channelbot/: bot.py  filters.py  settings.py
channelbot/handlers/: __init__.py  admin.py
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
